@@ -1,3 +1,7 @@
+2007-11-09  Ian Turner <ian@zmanda.com>
+	* server-src/taperscan.c: Fix a memory allocation bug and be a little
+	  more paranoid.
+
 2007-11-06  Ian Turner <ian@zmada.com>
 	* server-src/taperscan.c: Print a proper message if there is
 	  only one flag from device_read_label().
